# llestrade-v1

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.template.env  pyproject.toml  run_debug.sh  run_new_ui.sh
.github/workflows/: tests-live-providers.yml  tests-pr-deterministic.yml
docs/: current_behavior.md  distribution.md  docling-doctags-experimental-branch-plan.md  progress.md  pydantic_ai_adoption_plan.md  testing_strategy.md  work_plan.md
docs/archive/: hierarchical_reduction_implementation.md  progress_2025-07_transition_history.md  work_plan_backlog_legacy.md
docs/archive/tests/: README.md  README_llm_summarization_test.md  TEST_CONSOLIDATION_PLAN.md  filename_consistency_plan.md  test_update_plan.md
gateway/: README.md
gateway/docs/: bootstrap.md  operations.md  secrets.md  troubleshooting.md
gateway/overrides/deploy/: test.config.ts  vitest.config.mts
gateway/scripts/: bootstrap.sh  check_prereqs.sh  common.sh  deploy.sh  load_service_account_env.sh  print_app_env.sh  rollback.sh  seed_service_account_token.sh  sync_bedrock_api_key.sh  sync_secrets.sh  tail.sh  verify.sh
gateway/templates/: app.env.example  config.ts.template  local.env.example  upstream.lock.json  wrangler.jsonc.template
prompts/bundled/: comprehensive_analysis_instructions.md  per_document_anaysis.md  refinement_prompt.md  report_generation_instructions.md  report_generation_system_prompt.md  system_prompt.md
scripts/: export_citations.py  migrate_bulk_analysis_v1_to_v2.py  migrate_llestrade_from_legacy.py  reset_citation_pipeline.py  run_pytest.sh  run_pytest_live.sh  run_pytest_pr.sh  sync_placeholder_sets.py  sync_prompts.py  update_bulk_analysis_projects.py  update_imports.py
scripts/legacy/: README.md  migrate_bulk_analysis_v1_to_v2.py  migrate_llestrade_from_legacy.py  update_bulk_analysis_projects.py  update_imports.py
src/app/: main_window.py
src/app/core/: azure_artifacts.py  bulk_analysis_groups.py  bulk_analysis_runner.py  bulk_recovery.py  bundled_prompts.py  citation_review.py  citations.py  conversion_helpers.py  conversion_manager.py  converted_documents.py  docling_local.py  doctags.py  feature_flags.py  file_tracker.py  highlight_manager.py  job_cost_estimates.py  llm_catalog.py  llm_operation_settings.py  project_manager.py  prompt_assembly.py  prompt_manager.py  prompt_placeholders.py  prompt_preview.py  refinement_prompt.py  report_prompt_context.py  secure_settings.py
src/app/workers/: bulk_analysis_worker.py  bulk_reduce_worker.py  conversion_worker.py  coordinator.py  llm_backend.py  progress.py  report_common.py  report_worker.py  stage_contracts.py
src/common/llm/: bedrock_catalog.py  budgets.py  chunking.py  factory.py  request_budget.py  tokens.py
src/config/: app_config.py  observability.py  paths.py  placeholder_store.py  prompt_store.py
src/core/: pdf_utils.py
tests/: conftest.py  test_api_keys.py  test_both_clients.py  test_extended_thinking.py  test_gemini.py  test_large_document_processing.py
tests/app/core/: test_bulk_analysis_runner.py  test_bulk_recovery.py  test_bundled_prompts.py  test_citations.py  (+12 more)
tests/common/: test_anthropic_provider.py  test_azure_openai_provider.py  test_observability.py
tests/scripts/: test_reset_citation_pipeline.py
tests/test_infrastructure/: test_logging_and_exceptions.py
tests/unit/: test_pdf_utils.py
(+82 files in other folders)
