[project]
name = "forensic-psych-report-drafter"
version = "0.1.0"
description = "An experimental forensic report drafter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic[bedrock]==0.51.0",
    "azure-ai-documentintelligence>=1.0.2",
    "google-generativeai>=0.8.5",
    "langchain-text-splitters>=0.3.6",
    "openai>=1.84.0",
    "psutil>=7.0.0",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.1.0",
    "python-frontmatter>=1.1.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
    "python-docx>=1.1.0",
    "keyring>=24.3.0",
    "pypandoc>=1.15",
    "pypandoc-binary>=1.15",
    "pyside6>=6.9.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "arize-phoenix>=5.0.0",
    "openinference-instrumentation>=0.1.12",
    "openinference-instrumentation-openai>=0.1.12",
    "openinference-instrumentation-anthropic>=0.1.0",
    "rich>=13.0.0",
    "pyinstaller>=6.11.0",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
qt_api = "pyside6"
testpaths = ["tests"]
markers = [
    "unit: fast deterministic unit tests",
    "core: dashboard core/domain tests",
    "worker: worker and orchestration tests",
    "ui: Qt UI and controller/widget tests",
    "integration: multi-module integration tests",
    "live_provider: tests that call real external LLM providers",
    "slow: tests that are intentionally long-running",
]
filterwarnings = [
    "ignore:'HTTP_422_UNPROCESSABLE_ENTITY' is deprecated:DeprecationWarning:phoenix.server.api.routers",
]
